--- a/index.html
+++ b/index.html
@@ -245,6 +245,14 @@
     try {
       const db = await initIndexedDB();
       const tx = db.transaction(['state'], 'readonly');
+      const firstTime = !localStorage.getItem('vanguardInitialized');
+if (firstTime) {
+  console.log('First time use detected – pulling fresh data from Supabase');
+  await pullFromSupabase();
+  await saveStateToDB();
+  localStorage.setItem('vanguardInitialized', 'true');
+  return;
+}
       const req = tx.objectStore('state').get('appState');
       await new Promise(resolve => {
         req.onsuccess = e => {
@@ -915,6 +923,122 @@
     window.addEventListener('offline', updateSyncStatus);
     updateSyncStatus();
   });
+</script>
+
+<script>
+let pendingStockData = null;
+let pendingUser = null;
+
+// Keypad event delegation
+document.getElementById('keypad').addEventListener('click', function(e){
+    const input = document.getElementById('stockOutPassword');
+    if (e.target.classList.contains('keypad-btn')){
+        input.value += e.target.dataset.num;
+    } else if (e.target.id === "clearPwdBtn"){
+        input.value = "";
+    } else if (e.target.id === "delPwdBtn"){
+        input.value = input.value.slice(0, -1);
+    }
+});
+
+// Modal close function
+function closePwdModal() {
+    document.getElementById('passwordModal').style.display = "none";
+    document.getElementById('stockOutPassword').value = '';
+    document.getElementById('pwdResult').textContent = '';
+    pendingStockData = null;
+    pendingUser = null;
+}
+
+document.getElementById('cancelStockOutBtn').onclick = closePwdModal;
+
+document.getElementById('confirmStockOutBtn').onclick = function() {
+    let pwd = document.getElementById('stockOutPassword').value || '';
+    let errorElem = document.getElementById('pwdResult');
+    if (!pwd || pwd.length < 4){
+        errorElem.textContent = "Stock Out Failed. Try again.";
+        return;
+    }
+    // Validate password with server
+    verifyUserPassword(pendingUser.id, pwd, function(success){
+        if (success) {
+            closePwdModal();
+            completeStockOut(pendingStockData, pendingUser);
+        } else {
+            errorElem.textContent = "Stock Out Failed. Try again.";
+        }
+    });
+};
+
+// Trigger Stock Out flow
+function handleStockOutInitiate(stockData, takenByUser) {
+    // Unrestricted for Franklin
+    if (takenByUser.username && takenByUser.username.trim().toLowerCase() === 'franklin'){
+        return completeStockOut(stockData, takenByUser);
+    }
+    pendingStockData = stockData;
+    pendingUser = takenByUser;
+    document.getElementById('passwordPrompt').textContent =
+        `Enter password for ${takenByUser.username} to confirm stock out.`;
+    document.getElementById('passwordModal').style.display = "block";
+    document.getElementById('stockOutPassword').value = '';
+    document.getElementById('pwdResult').textContent = '';
+    document.getElementById('stockOutPassword').focus();
+}
+
+// AJAX - vanilla JS
+function verifyUserPassword(userId, password, cb){
+    let xhr = new XMLHttpRequest();
+    xhr.open('POST', '/api/validate-user-password', true);
+    xhr.setRequestHeader("Content-Type", "application/json");
+    xhr.onreadystatechange = function(){
+        if (xhr.readyState === 4) {
+            try {
+                let resp = JSON.parse(xhr.responseText);
+                cb(resp && resp.success);
+            } catch (e) { cb(false); }
+        }
+    };
+    xhr.onerror = function() { cb(false); };
+    xhr.send(JSON.stringify({ userId: userId, password: password }));
+}
+
+// Complete stock out (do main transaction)
+function completeStockOut(stockData, user){
+    // Send to backend to process transaction
+    let xhr = new XMLHttpRequest();
+    xhr.open('POST', '/api/stock-out', true);
+    xhr.setRequestHeader("Content-Type", "application/json");
+    xhr.onreadystatechange = function(){
+        if (xhr.readyState === 4){
+            try {
+                let resp = JSON.parse(xhr.responseText);
+                if (resp && resp.success){
+                    alert("Stock Out Confirmed!");
+                    // Telegram notification (optional)
+                    sendTelegramMessage(`Stock Out: ${stockData.itemName || '??'} by ${user.username}`);
+                    // Update your dashboard/UI as needed here.
+                } else {
+                    alert("Unexpected error--Stock Out not logged.");
+                }
+            } catch (e) {
+                alert("Unexpected error--Stock Out not logged.");
+            }
+        }
+    };
+    xhr.send(JSON.stringify({ stockData: stockData, userId: user.id }));
+}
+
+function sendTelegramMessage(msg) {
+    // Simple notification (optional)
+    let xhr = new XMLHttpRequest();
+    xhr.open('POST', '/api/send-telegram', true);
+    xhr.setRequestHeader("Content-Type", "application/json");
+    xhr.send(JSON.stringify({ msg: msg }));
+}
+</script>
+
+
 </script>
 </body>
 </html>
