--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@
   <button class="key" type="button" data-key="0">0</button>
   <button class="key" type="button" data-key="%">%</button>
 </div>
+    <button class="clear-btn" onclick="clearPin()">Clear PIN</button>
+<button class="reset-btn" onclick="resetApp()">Reset App Data</button>
 </div>
 
 <!-- MAIN APP -->
