--- a/index.html
+++ b/index.html
@@ -1044,8 +1044,8 @@ function generateUUID() {
 }
 
 // Example: Fetching itemId from an input field
-const itemIdInput = document.getElementById('itemIdInput');
-const itemId = itemIdInput ? itemIdInput.value : 'default_value'; // Provide a default value if not defined
+// Generate a new UUID for itemId
+const itemId = generateUUID();
 
 const newItemId = generateUUID();
 const insertQuery = `
@@ -1054,7 +1054,7 @@ const insertQuery = `
 `;
 const values = [
   newItemId,
-  itemId, // Ensure itemId is defined here
+  itemId, // Use the generated itemId
   type,
   quantity,
   reason,
