--- a/index.html
+++ b/index.html
@@ -1036,7 +1036,51 @@
         }
 
         /* ===== UTILS ===== */
-        const genId = () => `id_${Date.now()}_${Math.random().toString(36).slice(2, 9)}`;
+                /* ===== UTILS ===== */
+function generateUUID() {
+  return ([1e7]+-1e3+-4e3+-8e3+-1e11).replace(/[018]/g, c =>
+    (c ^ crypto.getRandomValues(new Uint8Array(1))[0] & 15 >> c / 4).toString(16)
+  );
+}
+
+// Generate a new UUID for itemId
+const itemId = generateUUID();
+
+// Set a default value for type
+const type = 'default_type'; // Default value
+
+const newItemId = generateUUID();
+const insertQuery = `
+  INSERT INTO stock_movements (legacy_id, item_id, type, quantity, reason, user_name, staff_member, timestamp, "user", updated_at, version, verified_by, verification_timestamp, verification_note, confirmed_pin)
+  VALUES ($1, $2, $3, $4, $5, $6, $7, $8, $9, $10, $11, $12, $13, $14, $15)
+`;
+const values = [
+  newItemId,
+  itemId, // Use the generated itemId
+  type, // Use the default value for type
+  quantity,
+  reason,
+  userName,
+  staffMember,
+  timestamp,
+  userId,
+  updated_at,
+  version,
+  verifiedBy,
+  verificationTimestamp,
+  verificationNote,
+  confirmedPin
+];
+const updateQuery = `
+  UPDATE stock_movements
+  SET quantity = $1, reason = $2
+  WHERE legacy_id = $3
+`;
+const updateValues = [
+  newQuantity,
+  newReason,
+  legacyId // The UUID of the record to update
+];
 
         const sendTG = msg => {
             if (!TELEGRAM_BOT || !TELEGRAM_CHAT) return;
