--- a/index.html
+++ b/index.html
@@ -1058,6 +1058,7 @@ const values = [
   newItemId,
   itemId, // Use the generated itemId
   type, // Use the default value for type
+  quantity,
   reason,
   userName,
   staffMember,
